# opencalibration

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  codecov.yml
.github/workflows/: ci.yaml  ci.yml
app/: CMakeLists.txt  extract_camera_db.cpp  pipeline_runner.cpp
cmake/: opencalibrationConfig.cmake.in
data/: camera_database.json
include/jk/: KDTree.h  KMeans.h
include/opencalibration/combinatorics/: interleave.hpp
include/opencalibration/dense/: dense_stereo.hpp
include/opencalibration/distort/: distort_keypoints.hpp  invert_distortion.hpp
include/opencalibration/extract/: camera_database.hpp  extract_features.hpp  extract_image.hpp  extract_metadata.hpp
include/opencalibration/geo_coord/: geo_coord.hpp
include/opencalibration/geometry/: KMeans.hpp  intersection.hpp  spectral_cluster.hpp  utils.hpp
include/opencalibration/io/: checkpoint.hpp  cv_raster_conversion.hpp  deserialize.hpp  saveXYZ.hpp  serialize.hpp
include/opencalibration/match/: match_features.hpp
include/opencalibration/model_inliers/: essential_matrix_model.hpp  fundamental_matrix_model.hpp  homography_model.hpp  ransac.hpp
include/opencalibration/ortho/: blending.hpp  color_balance.hpp  gdal_dataset.hpp  image_cache.hpp  ortho.hpp  radiometric_cost.hpp
include/opencalibration/performance/: performance.hpp
include/opencalibration/pipeline/: link_stage.hpp  load_stage.hpp  pipeline.hpp  progress.hpp  relax_stage.hpp
include/opencalibration/relax/: autodiff_cost_function.hpp  graph.hpp  grid_filter.hpp  relax.hpp  relax_cost_function.hpp  relax_group.hpp  relax_problem.hpp
include/opencalibration/surface/: expand_mesh.hpp  intersect.hpp  refine_mesh.hpp
include/opencalibration/tile_ordering/: tile_ordering.hpp
include/opencalibration/types/: camera_model.hpp  camera_relations.hpp  correspondence.hpp  decomposed_pose.hpp  feature_2d.hpp  feature_match.hpp  feature_track.hpp  graph.hpp  hilbert.hpp  image.hpp  image_metadata.hpp  measurement_graph.hpp  mesh_graph.hpp  node_links.hpp  node_pose.hpp  pipeline_state.hpp  plane.hpp  point_cloud.hpp  raster.hpp  ray.hpp  relax_options.hpp  surface_model.hpp  union_find.hpp
src/: CMakeLists.txt
src/dense/: CMakeLists.txt  dense_stereo.cpp
src/distort/: CMakeLists.txt  distort_keypoints.cpp  invert_distortion.cpp
src/extract/: CMakeLists.txt  TinyEXIF.cpp  TinyEXIF.h  camera_database.cpp  extract_features.cpp  extract_image.cpp  extract_metadata.cpp  tinyxml2.cpp  tinyxml2.h
src/geo_coord/: CMakeLists.txt  geo_coord.cpp
src/geometry/: CMakeLists.txt  intersection.cpp
src/io/: .deserialize.cpp.kate-swp  CMakeLists.txt  base64.c  base64.h  checkpoint.cpp  cv_raster_conversion.cpp  deserialize.cpp  deserialize_MeasurementGraph.cpp  deserialize_MeshGraph.cpp  saveXYZ.cpp  serialise_Raster.cpp  serialize.cpp  serialize_MeasurementGraph.cpp  serialize_MeshGraph.cpp
src/match/: CMakeLists.txt  match_features.cpp
src/model_inliers/: CMakeLists.txt  essential_matrix_model.cpp  fundamental_matrix_model.cpp  homography_model.cpp  ransac.cpp
src/oc_extract/: CMakeLists.txt  extract_features.cpp
src/ortho/: CMakeLists.txt  blending.cpp  color_balance.cpp  image_cache.cpp  ortho.cpp  thumbnail_encode.hpp
src/performance/: CMakeLists.txt  performance.cpp
src/pipeline/: CMakeLists.txt  link_stage.cpp  link_stage.hpp  load_stage.cpp  pipeline.cpp  pipeline.cpp.dot  relax_stage.cpp  relax_stage.hpp
src/relax/: CMakeLists.txt  autodiff_cost_function.cpp  ceres_log_forwarding.cpp  ceres_log_forwarding.hpp  relax.cpp  relax_group.cpp  relax_problem.cpp
src/surface/: CMakeLists.txt  expand_mesh.cpp  intersect.cpp  refine_mesh.cpp
src/tile_ordering/: CMakeLists.txt  tile_ordering.cpp
test/: CMakeLists.txt  gtest_main.cpp  test_blending.cpp  test_camera_database.cpp  test_checkpoint.cpp  test_color_balance.cpp  test_combinatorics.cpp  test_cost_functions.cpp  test_cv_raster_conversion.cpp  test_dense.cpp  test_distort.cpp  test_extract.cpp  test_extract_features.cpp  test_extract_metadata.cpp  test_geo_coord.cpp  test_geometry.cpp  test_graph.cpp  test_match.cpp  test_meshgraph.cpp  test_ortho.cpp  test_ortho_functional.cpp  test_pipeline.cpp  test_ransac_benchmark.cpp  test_ransac_functional.cpp  test_ransac_unit.cpp  test_raster.cpp  test_refine_mesh.cpp  test_relax.cpp  test_relax_options.cpp  test_serialize_deserialize.cpp  test_tile_ordering.cpp  test_tree.cpp  verify_pipeline_outputs.cmake
tools/: check_style.sh  ci_local.sh  fix_style.sh  install_dependencies.sh
